# SFU-CMPT-000-ASGN-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  callgrind.out.50976  global.h  gmon.out  gtArgument.cpp  gtArgument.h  gtModel.cpp  gtModel.h  gtObject.cpp  gtObject.hpp  gtScene.cpp  gtScene.hpp  gtTracer.cpp  gtTracer.hpp  image_util.cpp  raycast.cpp  trace.cpp
include/: CheckError.h  InitShader.cpp  mat.h  shader.h
